--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     
 <head>
     <title>Perfumes</title>
+    <link rel="icon" href="https://img.freepik.com/free-psd/elegant-black-perfume-bottle_191095-83842.jpg">
 
 </head>
 
